Change the publish language when a post is saved, make sure a long breadcrumb doesnt break the interface

--- a/app.css
+++ b/app.css
@@ -971,6 +971,9 @@ ins {
   padding:0 15px;
   height:40px;
   line-height:40px;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:nowrap;
   }
 
 .popup {
@@ -1566,7 +1569,6 @@ ins {
   }
 
 .publish-flag {
-  background:#f8f8f8;
   color:#a8afb2;
   position:absolute;
   right:0;
@@ -1580,6 +1582,7 @@ ins {
     color:#d4d7d9;
     }
   .publish-flag:hover {
+    background:#f8f8f8;
     color:#a8afb2;
     }
 
